--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,4 +15,12 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="148dp"
+        android:layout_height="115dp"
+        android:text="Hi there"
+        tools:layout_editor_absoluteX="61dp"
+        tools:layout_editor_absoluteY="85dp" />
+
 </android.support.constraint.ConstraintLayout>
