--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="-2"
+            android:onClick="button"
             android:text="Get Directions!" />
 
         <LinearLayout
@@ -28,20 +29,26 @@
             android:layout_weight="-2"
             tools:layout_editor_absoluteY="48dp">
 
-            <TextView
-                android:id="@+id/textView1"
+            <EditText
+                android:id="@+id/currLoc"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Current Location"
-                android:visibility="visible" />
+                android:ems="10"
+                android:hint="Current Location"
+                android:inputType="textPostalAddress"
+                android:textAppearance="@style/TextAppearance.AppCompat" />
 
-            <TextView
-                android:id="@+id/textView2"
+            <EditText
+                android:id="@+id/destLoc"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Destination Class" />
+                android:ems="10"
+                android:hint="Destinated Location"
+                android:inputType="textPostalAddress"
+                android:textAppearance="@style/TextAppearance.AppCompat" />
+
         </LinearLayout>
 
     </LinearLayout>
