should have your changes

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,8 +25,9 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="-2"
+            android:gravity="center_vertical"
             tools:layout_editor_absoluteY="48dp">
 
             <EditText
@@ -35,7 +36,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
-                android:hint="Current Location"
+                android:hint="Starting Location"
                 android:inputType="textPostalAddress"
                 android:textAppearance="@style/TextAppearance.AppCompat" />
 
@@ -49,6 +50,28 @@
                 android:inputType="textPostalAddress"
                 android:textAppearance="@style/TextAppearance.AppCompat" />
 
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/L3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0"
+            android:gravity="bottom|center_horizontal"
+            android:orientation="vertical"
+            tools:layout_editor_absoluteY="559dp">
+
+            <TextView
+                android:id="@+id/text3"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="-1"
+                android:contentDescription="Instructions"
+                android:text="Enter your starting building and your destinated building."
+                android:textAllCaps="false"
+                android:textAppearance="@style/TextAppearance.AppCompat"
+                android:textSize="14sp"
+                app:fontFamily="sans-serif" />
         </LinearLayout>
 
     </LinearLayout>
