--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -67,7 +67,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="-1"
                 android:contentDescription="Instructions"
-                android:text="Enter your starting building and your destinated building."
+                android:text="Enter your starting building and your destination building."
                 android:textAllCaps="false"
                 android:textAppearance="@style/TextAppearance.AppCompat"
                 android:textSize="14sp"
