--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -74,6 +74,12 @@
                 app:fontFamily="sans-serif" />
         </LinearLayout>
 
+        <com.google.android.gms.maps.MapView
+            android:id="@+id/mapView"
+            android:layout_width="match_parent"
+            android:layout_height="357dp"
+            android:layout_weight="-2" />
+
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
